syntax = "proto3";

package api.rpc_sys.v1;

import "paginator/paginator.proto";

option go_package = "fkratos/api/rpc_sys/v1;v1";

// 变量的命名一律使用小驼峰命名法，例如：firstName、lastName等。
// 后缀定义:请求req,响应reply

// 日志
service SysLog {
  //日志-列表
  rpc SysLogList(SysLogListReq) returns (SysLogListResp);
  //日志-信息
  rpc SysLogInfo(SysLogInfoReq) returns (SysLogInfoResp);
  //日志-保存
  rpc SysLogStore(SysLogStoreReq) returns (SysLogStoreResp);
}

// 日志信息
message SysLogInfo {
  string id = 1; // 编号
  string adminID = 2; // 管理员ID
  string username = 3; // 账号
  string ip = 4; // ip
  string uri = 5; // 请求路径
  string uriDesc = 6; // 请求描述
  string useragent = 7; // 浏览器标识
  string req = 8; // 请求数据
  string resp = 9; // 响应数据
  string createdAt = 10; // 创建时间
}

//请求-日志列表
message SysLogListReq {
  paginator.PaginatorReq paginator = 1; //分页
}

//响应-日志列表
message SysLogListResp {
  paginator.PaginatorReply paginator = 1; //分页
  repeated SysLogInfo list = 2; //管理员列表
}

//请求-单条日志
message SysLogInfoReq {
  string id = 1; //ID
}

//响应-单条日志
message SysLogInfoResp {
  SysLogInfo info = 1; //信息
}

//请求-日志存储
message SysLogStoreReq {
  string adminID = 1; // 管理员ID
  string username = 2; // 账号
  string ip = 3; // ip
  string uri = 4; // 请求路径
  string uriDesc = 5; // 请求描述
  string useragent = 6; // 浏览器标识
  string req = 7; // 请求数据
  string resp = 8; // 响应数据
}

//响应-日志存储
message SysLogStoreResp {
  SysLogInfo info = 1; //信息
}
